fixed alignment

--- a/crew.css
+++ b/crew.css
@@ -214,7 +214,7 @@ p {
 
     .heading {
         font-size: 18px;
-        justify-content: left;
+        justify-content: center;
         margin-top: 20px;
     }
     .links {
